...
            android:padding="@dimen/padding_default_small"
            android:background="@color/default_white"
            android:layout_marginBottom="@dimen/divider_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/categories_list"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recyclerview_category_height"
            tools:listitem="@layout/category_item"
...
            android:textStyle="bold"
            android:textSize="@dimen/text_diver_sessao"
            android:padding="@dimen/padding_default_small"
            android:background="@color/default_white"
            android:layout_marginBottom="@dimen/divider_min"
            android:layout_marginTop="@dimen/divider_min"
            app:layout_constraintBottom_toTopOf="@+id/products_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories_list"/>


    <androidx.recyclerview.widget.RecyclerView
...
